feat: edit condition settings block

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -420,7 +420,7 @@
 
                         <div class="data-wrap">
                           <p class="text text_regular text__color_dark-grey">
-                            Range
+                            Range long
                           </p>
                         </div>
 
@@ -442,7 +442,7 @@
                                   data-type="dynamic"
                                   data-state="ture">
                                   <p class="text_large text__color_dark-grey">
-                                    1775.2
+                                    150.1
                                   </p>
                                   <p
                                     class="text_small text__color_dark-grey"></p>
@@ -464,7 +464,111 @@
                                   data-type="dynamic"
                                   data-state="ture">
                                   <p class="text_large text__color_dark-grey">
-                                    2100.1
+                                    140.1
+                                  </p>
+                                  <p
+                                    class="text_small text__color_dark-grey"></p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div
+                            class="data-info-container data-info-container_tiny">
+                            <div
+                              class="input-container-wrap input-container-wrap_tiny-3 left"
+                              data-input="input-field">
+                              <div class="input-wrapp">
+                                <input
+                                  class="input-field input-field_left text_large text__color_dark-grey"
+                                  type="text"
+                                  data-type="number"
+                                  data-unit="date" />
+                              </div>
+                              <div class="input-text-center">
+                                <div
+                                  class="data-wrap"
+                                  data-type="dynamic"
+                                  data-state="ture">
+                                  <p class="text_large text__color_dark-grey">
+                                    4
+                                  </p>
+                                  <p
+                                    class="text_small text__color_dark-grey"
+                                    data-mode="hour">
+                                    h
+                                  </p>
+                                </div>
+                              </div>
+                            </div>
+                            <button
+                              class="button-input button-time-small right text_small"
+                              data-type="time"
+                              data-mode="hour">
+                              h
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="line">
+                      <div class="switcher-wrap switcher-wrap_gap-medium">
+                        <div class="form-switch">
+                          <input
+                            class="form-check-input custom-outline m-auto"
+                            type="checkbox"
+                            role="switch"
+                            checked="" />
+                        </div>
+
+                        <div class="data-wrap">
+                          <p class="text text_regular text__color_dark-grey">
+                            Range short
+                          </p>
+                        </div>
+
+                        <div class="handler-box handler-box_gap-small ms-auto">
+                          <div
+                            class="data-info-container data-info-container_medium">
+                            <div
+                              class="input-container-wrap input-container-wrap_tiny left"
+                              data-input="input-field">
+                              <div class="input-wrapp input-wrapp_left">
+                                <input
+                                  class="input-field input-field_left text_large text__color_dark-grey"
+                                  type="text"
+                                  data-type="number" />
+                              </div>
+                              <div class="input-text-center">
+                                <div
+                                  class="data-wrap"
+                                  data-type="dynamic"
+                                  data-state="ture">
+                                  <p class="text_large text__color_dark-grey">
+                                    175.2
+                                  </p>
+                                  <p
+                                    class="text_small text__color_dark-grey"></p>
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              class="input-container-wrap input-container-wrap_tiny right"
+                              data-input="input-field">
+                              <div class="input-wrapp input-wrapp_right">
+                                <input
+                                  class="input-field input-field_right text_large text__color_dark-grey"
+                                  type="text"
+                                  data-type="number" />
+                              </div>
+                              <div class="input-text-center">
+                                <div
+                                  class="data-wrap"
+                                  data-type="dynamic"
+                                  data-state="ture">
+                                  <p class="text_large text__color_dark-grey">
+                                    121.04
                                   </p>
                                   <p
                                     class="text_small text__color_dark-grey"></p>
