fix: runner grid styles

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -424,7 +424,7 @@
                           </p>
                         </div>
 
-                        <div class="handler-box handler-box_gap-small ms-auto">
+                        <div class="handler-box gap-1 ms-auto">
                           <div
                             class="data-info-container data-info-container_medium">
                             <div
@@ -528,7 +528,7 @@
                           </p>
                         </div>
 
-                        <div class="handler-box handler-box_gap-small ms-auto">
+                        <div class="handler-box gap-1 ms-auto">
                           <div
                             class="data-info-container data-info-container_medium">
                             <div
@@ -771,7 +771,7 @@
                           </p>
                         </div>
 
-                        <div class="d-flex align-items-center gap-2">
+                        <div class="d-flex align-items-center gap-2 ms-auto">
                           <div class="handler-box">
                             <div
                               class="data-info-container data-info-container_tiny">
