fix: some blocks on runner page

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -192,7 +192,7 @@
                         </div>
 
                         <div
-                          class="button-new-wrap button-new-wrap_normal btn-shadow">
+                          class="button-new-wrap button-new-wrap_normal btn-shadow ms-auto">
                           <button
                             class="button-group button-group_normal-1 text_large btn-active"
                             data-type="btn">
@@ -248,7 +248,7 @@
                         </div>
 
                         <div
-                          class="data-info-container data-info-container_medium">
+                          class="data-info-container data-info-container_medium ms-auto">
                           <div
                             class="input-container-wrap input-container-wrap_tiny left"
                             data-input="input-field">
@@ -1037,7 +1037,7 @@
                   <div class="block-content-wrap__wrapper">
                     <div class="line">
                       <div
-                        class="grid grid-cols-2 line-grid align-items-center ms-n2">
+                        class="grid grid-cols-2 line-grid align-items-center">
                         <div class="d-flex align-items-center gap-3">
                           <div class="funding-rate-block">
                             <div
@@ -1050,7 +1050,7 @@
                             </div>
                           </div>
                           <div
-                            class="button-new-wrap button-new-wrap_small btn-shadow">
+                            class="button-new-wrap button-new-wrap_small btn-shadow ms-auto">
                             <button
                               class="button-group button-group_small-1 relative"
                               data-type="btn">
@@ -4985,7 +4985,7 @@
                           </div>
                         </div>
 
-                        <div class="selectorInputContainer">
+                        <div class="selectorInputContainer ms-auto">
                           <div
                             class="data-info-container data-info-container_medium">
                             <div
