fix: console error

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -10848,7 +10848,7 @@
     <div class="modal-overlay closeModalTrigger"></div>
 
     <div class="modal-wrapper modal-attention">
-      <div class="modal-window-wrap addFieldsInstance">
+      <div class="modal-window-wrap">
         <div class="modal-window-header">
           <h4 class="modal-window-title text_small text__color_grey">
             Volume Settings
